<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/about_rv_settings_title"
	xmlns:revolt="http://schemas.android.com/apk/res/com.revolt.control">

	<PreferenceCategory
		android:key="links"
		android:title="@string/revolt">

		<Preference
			android:key="revolt_website"
			android:title="@string/revolt_website_title"
			android:summary="@string/revolt_website_summary" />
                <Preference
                        android:key="revolt_fb"
                        android:title="@string/revolt_fb_title"
                        android:summary="@string/revolt_fb_summary" />
                <Preference
                        android:key="revolt_source"
                        android:title="@string/revolt_source_title"
                        android:summary="@string/revolt_source_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="devs"
		android:title="@string/devs">

		<com.revolt.control.widgets.DeveloperPreference
            android:title="Johnhany97"
            revolt:nameDev="Johnhany97"
            revolt:twitterHandle="jhany97"
            revolt:donateLink="@string/donate_johnhany97" />

        </PreferenceCategory>

	<PreferenceCategory
		android:key="contributors"
		android:title="@string/contributors_title">

		<com.revolt.control.widgets.DeveloperPreference
            android:title="CyanogenMod"
            revolt:nameDev="cyanogenmod"
            revolt:twitterHandle="cyanogenmod"
            revolt:donateLink="@string/donate_cyanogenmod" />

		<com.revolt.control.widgets.DeveloperPreference
            android:title="AOKP"
            revolt:nameDev="aokp"
            revolt:twitterHandle="aokp_rom"
            revolt:donateLink="@string/donate_aokp" />

	</PreferenceCategory>

</PreferenceScreen>
